force-app/main/default/objects/ffr__ReportingDataRange__c/ffr__ReportingDataRange__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingdatarange</customHelpPage>
    <label>Reporting Data Range</label>
    <nameField>
        <label>Reporting Data Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Data Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>