force-app/main/default/objects/ffr__ReportingDataRange__c/fields/ffr__ReportingObject__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingObject__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reporting Object</label>
    <referenceTo>ffr__ReportingObject__c</referenceTo>
    <relationshipLabel>Reporting Data Ranges</relationshipLabel>
    <relationshipName>ReportingDataRanges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>