force-app/main/default/objects/ffr__ReportingDataRange__c/fields/ffr__Rows__c.field-meta.xml
<CustomField>
    <fullName>ffr__Rows__c</fullName>
    <description>Shows the number of related reporting filter mappings with a filter type of Rows.</description>
    <inlineHelpText>Shows the number of related reporting filter mappings with a filter type of Rows.</inlineHelpText>
    <label>Rows</label>
    <summaryFilterItems>
        <field>ffr__ReportingFilterMapping__c.ffr__Type__c</field>
        <operation>equals</operation>
        <value>Rows</value>
    </summaryFilterItems>
    <summaryForeignKey>ffr__ReportingFilterMapping__c.ffr__ReportingDataRange__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>