force-app/main/default/objects/ffr__ReportingDataRange__c/fields/ffr__TemplateKey__c.field-meta.xml
<CustomField>
    <fullName>ffr__TemplateKey__c</fullName>
    <label>Template Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DR01</fullName>
            </value>
            <value>
                <fullName>DR02</fullName>
            </value>
            <value>
                <fullName>DR03</fullName>
            </value>
            <value>
                <fullName>DR04</fullName>
            </value>
            <value>
                <fullName>DR05</fullName>
            </value>
            <value>
                <fullName>DR06</fullName>
            </value>
            <value>
                <fullName>DR07</fullName>
            </value>
            <value>
                <fullName>DR08</fullName>
            </value>
            <value>
                <fullName>DR09</fullName>
            </value>
            <value>
                <fullName>DR10</fullName>
            </value>
            <value>
                <fullName>DR11</fullName>
            </value>
            <value>
                <fullName>DR12</fullName>
            </value>
            <value>
                <fullName>DR13</fullName>
            </value>
            <value>
                <fullName>DR14</fullName>
            </value>
            <value>
                <fullName>DR15</fullName>
            </value>
            <value>
                <fullName>DR16</fullName>
            </value>
            <value>
                <fullName>DR17</fullName>
            </value>
            <value>
                <fullName>DR18</fullName>
            </value>
            <value>
                <fullName>DR19</fullName>
            </value>
            <value>
                <fullName>DR20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>